// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNotifications /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      aria-label="Loading"
      class="sc-cxabCf jRhlmn page-containerstyles__StyledPageContainer-sc-19l7k4-0"
      width="default"
    >
      <div
        class="sc-bjUoiL cAgDxb"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <div
          class="sc-kDDrLX emakin"
        >
          <a
            class="sc-iBkjds JLudk"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <h1
          class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-himrzO"
    >
      <label
        class="sc-iTONeN hHhUYG"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gicCDI gsldVJ sc-cCsOjp fKnTSB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cTQhss bUovwA"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTONeN hHhUYG"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jdAMXn bApTPz"
        placeholder="Type"
      >
        <div
          class="sc-gicCDI gsldVJ"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-dPyBCJ iEVgWQ"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmRaPn dquIzU sc-gXmSlM kDnGVS"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmRaPn dquIzU outer"
      type="button"
    >
      <span
        class="sc-fLlhyt rsaHd"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 dejFMJ"
    />
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      aria-label="Loading"
      class="sc-cxabCf jRhlmn page-containerstyles__StyledPageContainer-sc-19l7k4-0"
      width="default"
    >
      <div
        class="sc-bjUoiL cAgDxb"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjUoiL bDehF"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idiyUo hyoeZZ"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loadError 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <div
          class="sc-kDDrLX emakin"
        >
          <a
            class="sc-iBkjds JLudk"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <h1
          class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-himrzO"
    >
      <label
        class="sc-iTONeN hHhUYG"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gicCDI gsldVJ sc-cCsOjp fKnTSB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cTQhss bUovwA"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTONeN hHhUYG"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jdAMXn bApTPz"
        placeholder="Type"
      >
        <div
          class="sc-gicCDI gsldVJ"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-cOFTSb YRFLp"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmRaPn dquIzU sc-gXmSlM kDnGVS"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmRaPn dquIzU outer"
      type="button"
    >
      <span
        class="sc-fLlhyt rsaHd"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 dejFMJ"
    >
      <span
        class="sc-ivTmOn kdttXe"
      >
        <span
          class="sc-llJcti gTNJdJ"
        >
          Could not load notifications
          <br />
          Something went wrong
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loading=true 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <div
          class="sc-kDDrLX emakin"
        >
          <a
            class="sc-iBkjds JLudk"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <h1
          class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-himrzO"
    >
      <label
        class="sc-iTONeN hHhUYG"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gicCDI gsldVJ sc-cCsOjp fKnTSB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cTQhss bUovwA"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTONeN hHhUYG"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jdAMXn bApTPz"
        placeholder="Type"
      >
        <div
          class="sc-gicCDI gsldVJ"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-bBXxYQ GrXFi"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmRaPn dquIzU sc-gXmSlM kDnGVS"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmRaPn hixPQQ outer"
      disabled=""
      type="button"
    >
      <span
        class="sc-fLlhyt fDdCwi"
      >
        Reload notifications
      </span>
      <div
        aria-hidden="true"
        class="sc-bBrHrO eWduKa"
      >
        <div
          class="sc-dIouRR kROsgN"
        >
          <div
            class="sc-hHLeRK ixHZGt"
          />
          <div
            class="sc-hHLeRK eosujF"
          />
          <div
            class="sc-hHLeRK duXPhG"
          />
          <div
            class="sc-hHLeRK fLagWP"
          />
          <div
            class="sc-hHLeRK eWiwVk"
          />
          <div
            class="sc-hHLeRK kTdNEt"
          />
          <div
            class="sc-hHLeRK cfoRKl"
          />
          <div
            class="sc-hHLeRK hBeubl"
          />
        </div>
      </div>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 dejFMJ"
    />
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with notifications 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <div
          class="sc-kDDrLX emakin"
        >
          <a
            class="sc-iBkjds JLudk"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-breuTD gWTOEy"
      >
        <h1
          class="sc-bczRLJ hDLBIv sc-jqUVSM drQcdn"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-himrzO"
    >
      <label
        class="sc-iTONeN hHhUYG"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gicCDI gsldVJ sc-cCsOjp fKnTSB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cTQhss bUovwA"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTONeN hHhUYG"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jdAMXn bApTPz"
        placeholder="Type"
      >
        <div
          class="sc-gicCDI gsldVJ"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-BeQoi jbhGBa"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKXOVf ktoyia sc-jOrMOR gbiUSu"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmRaPn dquIzU sc-gXmSlM kDnGVS"
        type="button"
      >
        <span
          class="sc-fLlhyt rsaHd"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmRaPn dquIzU outer"
      type="button"
    >
      <span
        class="sc-fLlhyt rsaHd"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 dejFMJ"
    >
      <div>
        <div
          class="sc-iIPllB fnrTXs"
          type="success"
        >
          message1
        </div>
        <button
          class="sc-dmRaPn hvSNzt outer"
          type="button"
        >
          <span
            class="sc-fLlhyt rsaHd"
          >
            Remove
          </span>
        </button>
      </div>
      <div>
        <div
          class="sc-iIPllB ebdTin"
          type="warn"
        >
          message2
        </div>
        <button
          class="sc-dmRaPn hvSNzt outer"
          type="button"
        >
          <span
            class="sc-fLlhyt rsaHd"
          >
            Remove
          </span>
        </button>
      </div>
      <div>
        <div
          class="sc-iIPllB bCNBcp"
          type="error"
        >
          message3
        </div>
        <button
          class="sc-dmRaPn hvSNzt outer"
          type="button"
        >
          <span
            class="sc-fLlhyt rsaHd"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-cxabCf HhOcV page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksZaOG fmXsYE"
    >
      <h1
        class="sc-gsnTZi cTWewb sc-fEOsli cWAOmA"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-ivTmOn kdttXe"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-iBkjds JLudk"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
